# logspyq

./: README.md  pyproject.toml
examples/: 00-api-call-async.py  00-api-call.py  01-api-show-message.py  02-fetch-todos.py
src/logspyq/: __init__.py  api.py
